syntax = "proto3";

// message 예약어로 인터페이스 규정
message PasswordDetails {
    string id = 1;
    string password = 2;
    string hashValue = 3;
    string saltValue = 4;
}
message Empty {}
message PasswordList {
   repeated PasswordDetails passwords = 1;
}

// service 예약어로 grpc 통신 메서드 규정
service PasswordService {
    rpc RetrievePasswords (Empty) returns (PasswordList) {}
    rpc AddNewDetails (PasswordDetails) returns (PasswordDetails) {}
    rpc UpdatePasswordDetails (PasswordDetails) returns (PasswordDetails) {}
}
